2003-06-05  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::terminate_thread): Change system_printf to
	debug_printf.

2003-06-04  Christopher Faylor  <cgf@redhat.com>

	* shared.cc (shared_info::heap_chunk_size): Be really defensive about
	making sure that heap_chunk is set.

2003-06-04  Christopher Faylor  <cgf@redhat.com>

	* path.cc (conv_path_list): Use correct value when calculating length
	to avoid a potential SEGV.

2003-06-03  Pierre Humblet  <pierre.humblet@ieee.org>

        * fhandler_disk_file.cc (fhandler_disk_file::fstat): Mark the pc
        as non-executable if the file cannot be opened for read. Retry query
        open only if errno is EACCES. Never change the mode, even if it is 000
        when query open() fails.

2003-06-03  Christopher Faylor  <cgf@redhat.com>

	* configure.in: Allow any i?86 variant.
	* configure: Regenerate.

2003-06-03  Corinna Vinschen  <corinna@vinschen.de>
	    Thomas Pfaff <tpfaff@gmx.net>

	* fhandler_socket.cc (connect_thread): Remove.
	(accept_thread): Remove.
	(fhandler_socket::connect): Remove all special blocking handling.
	(fhandler_socket::accept): Ditto.
	* net.cc (cygwin_connect): Make blocking sockets temporarily
	non-blocking and call cygwin_select on them to be interruptible.
	(cygwin_accept):  Ditto.

2003-06-02  Christopher Faylor  <cgf@redhat.com>

	* spawn.cc (spawn_guts): Don't hang around if the parent doesn't exist.

2003-06-02  Christopher Faylor  <cgf@redhat.com>

	* cygthread.h (cygthread::terminate_thread): Mark private.
	* cygthread.cc (cygthread::terminate_thread): Deallocate free_range
	thread stuff.

2003-06-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::accept): Rename `signalled'
	to `interrupted' as used in fhandler_socket::connect.

2003-06-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::connect): Simplify previous
	patch.
	(fhandler_socket::accept): Ditto.
