@@ -206,12 +206,13 @@ details. */
            official release has been made so far.  This change removes
            exported symbols like fopen64, which might confuse configure.
        86: Export ftok
+       87: Export vsyslog
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 86
+#define CYGWIN_VERSION_API_MINOR 87
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
